force-app/main/default/objects/Event_Registration__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This allows an event registration to be associated to an Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Event_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>