force-app/main/default/objects/Event_Registration__c/fields/Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the person associated to the Event Registration has been sent an acknowledgement message. Required for temporary events solution (FormStack and Marketing Cloud)</description>
    <label>Acknowledgement Sent</label>
    <type>Checkbox</type>
</CustomField>