force-app/main/default/objects/Event_Registration__c/fields/Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirements__c</fullName>
    <description>This identifies any additional requirements (e.g. dietary / access / etc).</description>
    <inlineHelpText>Additional requirements information populated further to event question set</inlineHelpText>
    <label>Additional Requirements</label>
    <type>TextArea</type>
</CustomField>