force-app/main/default/objects/Event_Registration__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>Used to capture additional address from web</description>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>