force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_Address__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing Address</label>
    <type>Text</type>
</CustomField>