force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_City__c</fullName>
    <formula>Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing City</label>
    <type>Text</type>
</CustomField>