force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_State__c</fullName>
    <formula>Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing State</label>
    <type>Text</type>
</CustomField>