force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mobile_Phone__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mobile Phone</label>
    <type>Text</type>
</CustomField>