force-app/main/default/objects/Event_Registration__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Used to capture the birthdate from web</description>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>