force-app/main/default/objects/Event_Registration__c/fields/Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Notes__c</fullName>
    <label>Booking Notes</label>
    <type>TextArea</type>
</CustomField>