force-app/main/default/objects/Event_Registration__c/fields/Cancellation_Description__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Description__c</fullName>
    <description>This field is used to describe the reason for cancellation of ticket from web form</description>
    <inlineHelpText>Please give a description for cancelling this registration</inlineHelpText>
    <label>Cancellation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>