force-app/main/default/objects/Event_Registration__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>This field is used to determine the ticket cancellation reason from the web form</description>
    <inlineHelpText>Please choose the appropriate reason for the cancellation of this registration</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Provided</fullName>
            </value>
            <value>
                <fullName>Event no longer relevant</fullName>
            </value>
            <value>
                <fullName>Cannot make the date</fullName>
            </value>
            <value>
                <fullName>Too far to travel</fullName>
            </value>
            <value>
                <fullName>Do not want to say</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Date Conflict</fullName>
                <isActive>false</isActive>
                <label>Date Conflict</label>
            </value>
            <value>
                <fullName>Event Not Relevant</fullName>
                <isActive>false</isActive>
                <label>Event Not Relevant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>