force-app/main/default/objects/Event_Registration__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field is used to store city</description>
    <inlineHelpText>This field is used to store city</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>