force-app/main/default/objects/Event_Registration__c/fields/Company_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Company_Organisation__c</fullName>
    <description>This field is used to store the company/organisation</description>
    <inlineHelpText>company / organisation information populated further to event question set</inlineHelpText>
    <label>Company / Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>