force-app/main/default/objects/Event_Registration__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field is used to store country</description>
    <inlineHelpText>This field is used to store country</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>