force-app/main/default/objects/Event_Registration__c/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <description>This field is used to store Country of Residence</description>
    <inlineHelpText>This field is used to store Country of Residence</inlineHelpText>
    <label>Country of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_List</valueSetName>
    </valueSet>
</CustomField>