force-app/main/default/objects/Event_Registration__c/fields/Dietary_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirement__c</fullName>
    <description>Dietary Requirement Custom Question</description>
    <inlineHelpText>Dietary information populated further to event question set</inlineHelpText>
    <label>Dietary Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>