force-app/main/default/objects/Event_Registration__c/fields/Enquirer__c.field-meta.xml
<CustomField>
    <fullName>Enquirer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Enquirer that has registered for the Event</description>
    <label>Enquirer</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Event_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>