force-app/main/default/objects/Event_Registration__c/fields/Enquirer_or_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Enquirer_or_Contact_Id__c</fullName>
    <description>Case Insensitive ID of Lead or Contact</description>
    <formula>/* If Contact lookup is blank, use Lead ID */
IF(ISBLANK(Contact__c),  

     /* Get 18 character Lead ID*/
     CASESAFEID(Enquirer__c), 


     /* Otherwise get 18 character Contact ID*/
     CASESAFEID(Contact__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquirer or Contact Id</label>
    <type>Text</type>
</CustomField>