force-app/main/default/objects/Event_Registration__c/fields/Event_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Email__c</fullName>
    <label>Event Email</label>
    <type>Email</type>
</CustomField>