force-app/main/default/objects/Event_Registration__c/fields/Event_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Event_Mobile__c</fullName>
    <description>This field is used to store event attendee mobile number</description>
    <inlineHelpText>This field will be populated using ticket management web form</inlineHelpText>
    <label>Event Mobile</label>
    <type>Phone</type>
</CustomField>