force-app/main/default/objects/Event_Registration__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Gets Event Name from related Event</description>
    <formula>Event__r.Name</formula>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>