force-app/main/default/objects/Event_Registration__c/fields/Event_Product__c.field-meta.xml
<CustomField>
    <fullName>Event_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Product</label>
    <referenceTo>Event_Product__c</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Event_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>