force-app/main/default/objects/Event_Registration__c/fields/Event_Registration_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_ID_18_Char__c</fullName>
    <description>Case insensitive Event Registration ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Registration ID (18 Char)</label>
    <type>Text</type>
</CustomField>