force-app/main/default/objects/Event_Registration__c/fields/Event_Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Source__c</fullName>
    <description>Source from where Event Registration  was registered</description>
    <inlineHelpText>Source from where Event Registration  was registered</inlineHelpText>
    <label>Event Registration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Order</fullName>
            </value>
            <value>
                <fullName>Internal Order</fullName>
            </value>
            <value>
                <fullName>Manual Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>