force-app/main/default/objects/Event_Registration__c/fields/Event_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Status__c</fullName>
    <description>Event Registration Status</description>
    <inlineHelpText>Event Registration Status</inlineHelpText>
    <label>Event Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Attended / Checked In</fullName>
            </value>
            <value>
                <fullName>Attended / Checked Out</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>