force-app/main/default/objects/Event_Registration__c/fields/Hearing_Sight_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Sight_Requirement__c</fullName>
    <description>Hearing / Sight Requirement Custom Question</description>
    <inlineHelpText>Hearing / Sight Requirement</inlineHelpText>
    <label>Hearing / Sight Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>