force-app/main/default/objects/Event_Registration__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>This field is used to store the Job title</description>
    <inlineHelpText>job title populated further to event question set</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>