force-app/main/default/objects/Event_Registration__c/fields/Level_of_Study_Interest_Area__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Study_Interest_Area__c</fullName>
    <description>This is the level of study that the individual is interested in (Taught or Research)</description>
    <label>Level of Study Interest Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_Study</valueSetName>
    </valueSet>
</CustomField>