force-app/main/default/objects/Event_Registration__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Formula Field For combining First name and Last Name to be used in SOQL Query</description>
    <formula>First_Name__c + &quot; &quot; +  Last_Name__c</formula>
    <inlineHelpText>Event Registration Name</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>