force-app/main/default/objects/Event_Registration__c/fields/Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Number_Field__c</fullName>
    <inlineHelpText>This is test field used for Event Question Form</inlineHelpText>
    <label>Number Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>