force-app/main/default/objects/Event_Registration__c/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <description>The number of guests for the individual registration</description>
    <label>Number of Guests</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>