force-app/main/default/objects/Event_Registration__c/fields/Object_for_New_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Object_for_New_Attendees__c</fullName>
    <formula>IF( NOT( ISBLANK( TEXT( Event_Product__r.Object_for_New_Attendees__c ) ) ) ,  TEXT( Event_Product__r.Object_for_New_Attendees__c ) , TEXT( Event__r.Object_for_New_Attendees__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object for New Attendees</label>
    <type>Text</type>
</CustomField>