force-app/main/default/objects/Event_Registration__c/fields/Open_Day_Primary_Session__c.field-meta.xml
<CustomField>
    <fullName>Open_Day_Primary_Session__c</fullName>
    <description>Holds list of sessions available for an Open Day</description>
    <label>Open Day Primary Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Open_Day_Sessions</valueSetName>
    </valueSet>
</CustomField>