force-app/main/default/objects/Event_Registration__c/fields/Open_Day_Second_Session__c.field-meta.xml
<CustomField>
    <fullName>Open_Day_Second_Session__c</fullName>
    <description>Collects a second subject of interest for open day sessions</description>
    <label>Open Day Second Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Open_Day_Sessions</valueSetName>
    </valueSet>
</CustomField>