force-app/main/default/objects/Event_Registration__c/fields/Other_Course_Offered__c.field-meta.xml
<CustomField>
    <fullName>Other_Course_Offered__c</fullName>
    <description>The name of the other course the individuals hold an offer for</description>
    <inlineHelpText>The other course the individual holds an offer for</inlineHelpText>
    <label>Other Course Offered</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>