force-app/main/default/objects/Event_Registration__c/fields/Overnight_Accommodation_Required__c.field-meta.xml
<CustomField>
    <fullName>Overnight_Accommodation_Required__c</fullName>
    <description>This field is used to determine Over Night Accommodation requirement</description>
    <inlineHelpText>overnight accommodation information populated further to event question set</inlineHelpText>
    <label>Overnight Accommodation Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>