force-app/main/default/objects/Event_Registration__c/fields/Parking_Required__c.field-meta.xml
<CustomField>
    <fullName>Parking_Required__c</fullName>
    <description>This field is used to determine whether is Parking Required</description>
    <inlineHelpText>This field is used to determine whether is Parking Required</inlineHelpText>
    <label>Parking Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>