force-app/main/default/objects/Event_Registration__c/fields/Physical_Access_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Physical_Access_Requirement__c</fullName>
    <description>Physical Access Requirement Custom Question</description>
    <inlineHelpText>Physical access information populated further to event question set</inlineHelpText>
    <label>Physical Access Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>