force-app/main/default/objects/Event_Registration__c/fields/Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Field__c</fullName>
    <label>Picklist Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Option 3</fullName>
            </value>
            <value>
                <fullName>Option 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>