force-app/main/default/objects/Event_Registration__c/fields/Planned_Year_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Planned_Year_of_Entry__c</fullName>
    <description>This field is used to store planned year of entry</description>
    <inlineHelpText>This field is used to store planned year of entry</inlineHelpText>
    <label>Planned Year of Entry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>