force-app/main/default/objects/Event_Registration__c/fields/Preferred_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_Slot__c</fullName>
    <description>Collects preferred time slot for a session (used when sessions are not yet set up)</description>
    <label>Preferred Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>