force-app/main/default/objects/Event_Registration__c/fields/Primary_Course_Interests__c.field-meta.xml
<CustomField>
    <fullName>Primary_Course_Interests__c</fullName>
    <description>The primary courses of interest that the individual is interested in when attending the event</description>
    <label>Primary Course Interest(s)</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>