force-app/main/default/objects/Event_Registration__c/fields/Primary_Subject_Area_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subject_Area_Interest__c</fullName>
    <description>This field is used to store Primary Subject Area interest value form Session</description>
    <inlineHelpText>This field is automated through Web Registration process</inlineHelpText>
    <label>Primary Subject Area Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>