force-app/main/default/objects/Event_Registration__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>Event Registration QR Code</description>
    <inlineHelpText>Event Registration QR Code</inlineHelpText>
    <label>QR Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>