force-app/main/default/objects/Event_Registration__c/fields/QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_URL__c</fullName>
    <description>Field to store QR Code Data which is rendered as QR Code</description>
    <inlineHelpText>Field to store QR Code Data which is rendered as QR Code</inlineHelpText>
    <label>QR Code URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>