force-app/main/default/objects/Event_Registration__c/fields/Question_Field_Currency__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Currency__c</fullName>
    <description>This is test field for question component form</description>
    <inlineHelpText>This is test field for question component form</inlineHelpText>
    <label>Currency Field</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>