force-app/main/default/objects/Event_Registration__c/fields/Question_Field_Date__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Date__c</fullName>
    <description>This is test field used for Event Question Form</description>
    <inlineHelpText>This is test field used for Event Question Form</inlineHelpText>
    <label>Date Field</label>
    <type>Date</type>
</CustomField>