force-app/main/default/objects/Event_Registration__c/fields/Question_Field_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Long_Text__c</fullName>
    <description>This is test field for question component form</description>
    <inlineHelpText>This is test field for question component form</inlineHelpText>
    <label>Long Text Area (32,768)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>