force-app/main/default/objects/Event_Registration__c/fields/Question_Field_Phone__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Phone__c</fullName>
    <description>This is test field for question component form</description>
    <inlineHelpText>This is test field for question component form</inlineHelpText>
    <label>Phone Field</label>
    <type>Phone</type>
</CustomField>