force-app/main/default/objects/Event_Registration__c/fields/Question_Field_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Picklist__c</fullName>
    <description>This is test field for question component form</description>
    <inlineHelpText>This is test field for question component form</inlineHelpText>
    <label>Picklist Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Option A</fullName>
            </value>
            <value>
                <fullName>Option B</fullName>
            </value>
            <value>
                <fullName>Option C</fullName>
            </value>
            <value>
                <fullName>Option D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>