force-app/main/default/objects/Event_Registration__c/fields/Question_Field_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Text__c</fullName>
    <description>This is test field used for Event Question Form</description>
    <inlineHelpText>This is test field used for Event Question Form</inlineHelpText>
    <label>Text (255)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>