force-app/main/default/objects/Event_Registration__c/fields/Question_Field_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Question_Field_Text_Area__c</fullName>
    <description>This is test field for question component form</description>
    <inlineHelpText>This is test field for question component form</inlineHelpText>
    <label>Text Area (255)</label>
    <type>TextArea</type>
</CustomField>