force-app/main/default/objects/Event_Registration__c/fields/RAO_Number_Attended__c.field-meta.xml
<CustomField>
    <fullName>RAO_Number_Attended__c</fullName>
    <label>RAO Number Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>