force-app/main/default/objects/Event_Registration__c/fields/RAO_Number_Booked__c.field-meta.xml
<CustomField>
    <fullName>RAO_Number_Booked__c</fullName>
    <label>RAO Number Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>