force-app/main/default/objects/Event_Registration__c/fields/RAO_Unique_Event_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>RAO_Unique_Event_Registration_Id__c</fullName>
    <description>RAO unique Id used for migration</description>
    <externalId>true</externalId>
    <label>RAO Unique Event Registration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>