force-app/main/default/objects/Event_Registration__c/fields/Record_Type_for_New_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_for_New_Attendees__c</fullName>
    <formula>IF( NOT( ISBLANK( TEXT( Event_Product__r.Record_Type_for_New_Attendees__c ) ) ) , TEXT( Event_Product__r.Record_Type_for_New_Attendees__c ), TEXT( Event__r.Record_Type_for_New_Attendees__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type for New Attendees</label>
    <type>Text</type>
</CustomField>