force-app/main/default/objects/Event_Registration__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Complementary - Speaker</fullName>
            </value>
            <value>
                <fullName>Complementary - Vendor</fullName>
            </value>
            <value>
                <fullName>Complementary - Prospect</fullName>
            </value>
            <value>
                <fullName>Complementary - Media</fullName>
            </value>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Someone Else</fullName>
            </value>
            <value>
                <fullName>Unknown Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>