force-app/main/default/objects/Event_Registration__c/fields/Relationship_to_the_LED__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_the_LED__c</fullName>
    <description>This field is used to identify the relationship to the University</description>
    <inlineHelpText>LED relationship information populated further to event question set</inlineHelpText>
    <label>Relationship to the LED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Current Student of the Launch ED</fullName>
            </value>
            <value>
                <fullName>Graduate of the Launch ED</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>